--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,15 @@
   color: #FFFFFF;
   background: rgba(1,1,1,0.8);
   border-radius: 15px;
-  width: 80%;
-  padding: 1rem;
+
+  padding: 10px;
   font-family: "Segoe UI","Arial";
   font-size: 16px;
-  left: 0;
-  border: 4px;
+  left: 8px;
+
+  border: 10px;
+  position: relative;
+  margin-right: 176px;
 }
 
 .right {
@@ -30,11 +33,15 @@
   position: absolute;
   top: 60px;
   right: 0;
-  width: 15%;
+  width: 150px;
 
-  border: 4px solid;
+  border-left: 4px;
+  border-top: 4px;
+  border-bottom: 4px;
+  border-right: 0px;
   border-style: ridge;
   padding: 0.2rem;
+
 }
 
 .body {
